--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </g>
               </svg>
             </button>
-            <button class="button card__like-button">
+            <button class="button card__like-button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -167,7 +167,7 @@
                 </g>
               </svg>
             </button>
-            <button class="button card__like-button">
+            <button class="button card__like-button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -227,7 +227,7 @@
                 </g>
               </svg>
             </button>
-            <button class="button card__like-button">
+            <button class="button card__like-button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -289,7 +289,7 @@
                 </g>
               </svg>
             </button>
-            <button class="button card__like-button">
+            <button class="button card__like-button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -352,7 +352,7 @@
                 </g>
               </svg>
             </button>
-            <button class="button card__like-button">
+            <button class="button card__like-button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -412,7 +412,7 @@
                 </g>
               </svg>
             </button>
-            <button class="button card__like-button">
+            <button class="button card__like-button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -474,7 +474,7 @@
                 </g>
               </svg>
             </button>
-            <button class="button card__like-button">
+            <button class="button card__like-button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -540,7 +540,7 @@
                 </g>
               </svg>
             </button>
-            <button class="button card__like-button">
+            <button class="button card__like-button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -578,7 +578,9 @@
         </svg>
         <p class="popup__text">Вставьте дискету, чтобы продолжить</p>
         <form class="popup__form" method="dialog">
-          <button class=" close-button" type="submit">ok</button>
+          <button class="button close__button" type="submit">
+            <span class="button__text">Ok</span>
+          </button>
         </form>
       </dialog>
     </main>
